# git-forge

./: #12  #6  .gitattributes  .gitvendors  1  2  Cargo.toml  GH#11  GH#13  GH#35  GH#36  GH#45  GH#5  GH#8  README.md  anchor  anchor-content  body  context  description  source_ref  title
.config/: release-please-config.json  release-please-manifest.json
.forge/: environment.toml  toolchains.toml
.github/workflows/: CD.yml  CI.yml
comments/: 4151145615  4151145712  4151146372
crates/forge-github/: CHANGELOG.md  Cargo.toml
crates/forge-lsp/: Cargo.toml
crates/forge-mcp/: CHANGELOG.md  Cargo.toml
crates/forge-server/: CHANGELOG.md  Cargo.toml
crates/git-forge/: CHANGELOG.md  Cargo.toml
crates/git-forge-comment/: CHANGELOG.md  Cargo.toml  README.md
crates/git-forge-core/: CHANGELOG.md  Cargo.toml  README.md
crates/git-forge-issue/: CHANGELOG.md  Cargo.toml
crates/git-forge-issues/: CHANGELOG.md  Cargo.toml
crates/git-forge-release/: CHANGELOG.md  Cargo.toml
crates/git-forge-release/benches/: release.rs
crates/git-forge-release/src/: cli.rs  exe.rs
crates/git-forge-review/: CHANGELOG.md  Cargo.toml
crates/git-forge-review/benches/: review.rs
crates/git-forge-review/src/: cli.rs  exe.rs  lib.rs  reviews.rs
crates/git-forge-review/src/reviews/: git2.rs
crates/git-kiln/: Cargo.toml  README.md
crates/hearth/: Cargo.toml  README.md
docs/design/: forge-abstractions.md  git-forge-benchmarks.md  git-forge-comment-plan.md  git-forge-comments.md  git-forge.md  git-kiln.md  hearth.md  (+1 more)
issues/: 14  16  20  27  28  31  37
source/: url
(+99 files in other folders)
