[package]
name = "git-forge-release"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Release management domain for git-forge."

[dependencies]
clap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "release"
harness = false

[lints]
workspace = true
