[package]
name = "git-forge-review"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Review (pull/merge request) domain for git-forge."

[dependencies]
clap = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "review"
harness = false

[lints]
workspace = true
